bugs corrections on mobile and apply box shadow at login and bar search

--- a/css/components/_404.scss
+++ b/css/components/_404.scss
@@ -11,27 +11,51 @@ body{
         display: flex;
         align-items: center;
         justify-content: center;
+        width: 100%;
 
         .container{
+            position: relative;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
             border-radius: 15px;
             width: 60%;
             height: 90%;
             text-align: center;
-            background: rgba(#041159, $alpha: .5);
+            background: rgba(#041159, $alpha: .4);
+            box-shadow: 1px 1px 20px white;
             
-            img{
-                border: solid red 1px;
-                position: absolute;
-                left: -150px;
-            }
-
             h3 {
-            font-size: 10rem;
-            font-family: 'halo';
+                font-size: 10rem;
+                font-family: 'halo';
+                width: 100%;
+                padding: 30px;
+                height: 30%;
             }
 
             p{
+                position: absolute;
                 font-size: 2.5rem;
+                width: 60%;
+                height: 70%;
+                padding: 40px 20px 0px;
+                align-self: center;
+                top: 45%;
+                right: 1%;
+            }
+
+            .pic-404{
+                
+                display: flex;
+                align-items: center;
+                width: 40%;
+                height: 70%;
+                justify-content: center;
+                padding-right: 10px;
+
+                img{
+                    width: 100%;
+                }
             }
     }
     }
@@ -40,4 +64,57 @@ body{
         height: 20vh;
     }
 
+}
+
+@media only screen and(max-width: 1235px){
+    body .error-404 .container h3 {
+        font-size: 8rem;
+    }
+}
+@media only screen and(max-width: 1000px){
+
+    body .error-404 .container{
+        width: 80%;
+    }
+
+    body .error-404 .container h3 {
+        font-size: 7rem;
+        font-family: 'halo';
+        width: 100%;
+        padding: 30px;
+      }
+
+    body .error-404 .container p{
+        padding: 40px 20px;
+    }
+}
+
+@media only screen and(max-width: 615px) {
+
+
+    body .error-404 .container h3 {
+        font-size: 3rem;
+        padding: 10px;
+        padding-top: 30px;
+        height: 20%;
+        line-height: 30px;
+      }
+
+    body .error-404 .container .pic-404{
+        width: 100%;
+        height: 40%;
+
+        img {
+            height: 100%;
+        }
+    }
+
+    body .error-404 .container p{
+        
+        padding: 30px 10px 0px;
+        width: 100%;
+        position: static;
+        height: 40%;
+    }
+    
 }
