--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -48,6 +48,6 @@
     display: block;
 }
 .list-item:hover{
-    border-bottom: white 2px solid;
+    box-shadow: 0px 0px 0px 0px white;
 }
 
