--- a/css/components/_login.scss
+++ b/css/components/_login.scss
@@ -10,6 +10,7 @@
         background-color: rgba(173, 149, 149, 0.2);
         border: 2px solid white;
         border-radius: 40px;
+        box-shadow: 1px 1px 15px 1px white;
         color:  white;
         padding: 40px 30px;
         width: 50%; 
