--- a/css/main.css
+++ b/css/main.css
@@ -105,11 +105,12 @@ body {
 }
 
 .header__menu:hover .prueba, .prueba:hover {
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .list-item:hover {
-  border-bottom: white 2px solid;
+  box-shadow: 0px 0px 0px 0px white;
 }
 
 .origin {
@@ -125,6 +126,7 @@ body {
   background-color: rgba(173, 149, 149, 0.2);
   border: 2px solid white;
   border-radius: 40px;
+  box-shadow: 1px 1px 15px 1px white;
   color: white;
   padding: 40px 30px;
   width: 50%;
@@ -233,6 +235,8 @@ input::placeholder {
   width: 100%;
   height: 200px;
   background-color: rgba(4, 17, 89, 0.5);
+  border: #041159 solid 1px;
+  box-shadow: 1px 1px 20px 1px #041159;
 }
 
 .bar-search .container-tittle {
